style: improve clang formatting and vscode settings

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "ms-vscode.cmake-tools",
         "naumovs.color-highlight",
         "mhutchie.git-graph",
-        "sonarsource.sonarlint-vscode"
+        "sonarsource.sonarlint-vscode",
+        "vadimcn.vscode-lldb"
     ]
 }
