--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,34 @@
     "version": "0.2.0",
     "configurations": [
       {
-        "name": "Debug",
+        "name": "Debug (Example - Mac)",
+        "type": "lldb", // "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/build/example/empty_example",
+        "args": [],
+        "stopAtEntry": false,
+        "cwd": "${workspaceFolder}",
+        "environment": [],
+        "externalConsole": false,
+        "preLaunchTask": "build",
+        "logging": {
+          "engineLogging": false,
+          "trace": true,
+          "traceResponse": true
+      },
+        "setupCommands": [
+          {
+            "description": "Enable pretty-printing for gdb",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+          }
+        ]
+      },
+      {
+        "name": "Debug (Example - Linux)",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/build/vedo",
+        "program": "${workspaceFolder}/build/example/empty_example",
         "args": [],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
@@ -15,8 +39,10 @@
         "MIMode": "gdb",
         "miDebuggerPath": "/usr/bin/gdb",
         "logging": {
-          "engineLogging": true
-        },
+          "engineLogging": false,
+          "trace": true,
+          "traceResponse": true
+      },
         "setupCommands": [
           {
             "description": "Enable pretty-printing for gdb",
