--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -11,7 +11,7 @@ include(../cmake/folders.cmake)
 
 if(PROJECT_IS_TOP_LEVEL)
   find_package(vedo REQUIRED)
-  find_package(VTK REQUIRED)  # Assuming VTK is also required
+  find_package(VTK REQUIRED)
 endif()
 
 add_custom_target(run-examples)
@@ -20,9 +20,9 @@ function(add_example NAME)
   get_filename_component(TARGET_NAME "${NAME}" NAME_WE)
   get_filename_component(DIR "${NAME}" PATH)
   if (DIR)
-    set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/example/${DIR}")
+    set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/example/example/${DIR}")
   else()
-    set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/example")
+    set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/example/example")
   endif()
 
   add_executable("${TARGET_NAME}" "${NAME}.cpp")
@@ -34,15 +34,6 @@ function(add_example NAME)
   add_dependencies("run_${TARGET_NAME}" "${TARGET_NAME}")
   add_dependencies(run-examples "run_${TARGET_NAME}")
 endfunction()
-
-# function(add_example NAME)
-#   add_executable("${NAME}" "${NAME}.cpp")
-#   target_link_libraries("${NAME}" PRIVATE vedo ${VTK_LIBRARIES})
-#   target_compile_features("${NAME}" PRIVATE cxx_std_23)
-#   add_custom_target("run_${NAME}" COMMAND "${NAME}" VERBATIM)
-#   add_dependencies("run_${NAME}" "${NAME}")
-#   add_dependencies(run-examples "run_${NAME}")
-# endfunction()
 
 add_example(cpp_version)
 add_example(load_file)
